# textual-learning

./: .gitignore  README-dev.md  README.md  pyproject.toml
examples/: run_example.py
examples/demo_snippet/container/row/: three_buttons_in_a_row.py
examples/filezen/: fence.py  run_fz.py
examples/filezen/filelist/: __init__.py  filelist.py  navigation.py
src/: easy_launcher.py
src/components/basic/: __init__.py  box_layout.py  box_layout_1.py  button.py  empty_row.py  listbox.py
src/components/core/: __init__.py
src/components/core/event_engine/: signal.py
src/examples/cow/: __init__.py  run0.py
src/examples/cow/branch_details/: __init__.py  details.py  main.py  mini_db.py  toolbar.py
src/examples/cow/branch_list/: __init__.py  body.py  main.py  popups.py  toolbar.py  toolbar1.py
src/examples/cow/header/: header.py
src/examples/demo_snippet/container/row/: three_buttons_in_a_row.py
src/template/: app.py
src/textual_extensions/: __init__.py
src/textual_extensions/containers/: box.py
src/textual_extensions/core/: __init__.py  logger.py
src/textual_extensions/core/event_engine/: __init__.py  events.py  signal.py  signal2.py
src/textual_extensions/custom_widgets/: dialog.py  field_input.py  input.py  listbox.py
src/textual_extensions/widgets/: __init__.py  box_layout.py  button.py  focus_scope.py  form.py  input.py  label.py  listbox.py  listbox2.py  spacer.py  spacing.py  tab_bar.py  view_frame.py  widget.py
